# embedded-medical-device-ecg

./: README.md
duke-bme554-ecg-temp-ble-lab-main/: .gitignore  .gitlab-ci.yml  README.md  conftest.py  environment.yml  requirements.txt
duke-bme554-ecg-temp-ble-lab-main/application/: CMakeLists.txt  CMakePresets.json  prj.conf  west.yml
duke-bme554-ecg-temp-ble-lab-main/application/boards/: nrf52833dk_nrf52833.overlay
duke-bme554-ecg-temp-ble-lab-main/application/src/: ble-lib.c  ble-lib.h  calc_cycles.c  calc_cycles.h  final_main.c  main.c  old_main.c  temp.c
duke-bme554-ecg-temp-ble-lab-main/final_testing/: linear_regression_data.csv  test_bme554.py
duke-bme554-ecg-temp-ble-lab-main/prev_testing/adc_data/: 0.0V_1.csv  0.0V_2.csv  0.0V_3.csv  1.5V_1.csv  1.5V_2.csv  1V_2.csv  1V_3.csv  2.0V_2.csv  2.0V_3.csv  3.0V_1.csv  3.0V_3.csv  part3_hexdump.txt
duke-bme554-ecg-temp-ble-lab-main/prev_testing/pwm_data/: scope_0.csv  scope_2.csv  scope_3.csv  scope_33.csv  scope_34.csv  scope_35.csv  scope_37.csv  scope_40.csv  scope_41.csv  scope_43.csv  scope_44.csv  scope_47.csv  scope_49.csv  scope_51.csv  scope_52.csv  scope_55.csv  scope_56.csv
duke-bme554-ecg-temp-ble-lab-main/state_diagram/: ecg_poster_state.txt  ecg_state_diagram.txt
duke-bme554-ecg-temp-ble-lab-main/testing/: data.csv  hexdump.txt
duke-bme554-ecg-temp-ble-lab-main/testing/ECG_temp_analysis/: scope_22.csv  scope_23.csv  scope_26.csv  scope_34.csv  scope_36.csv  scope_40.csv  scope_41.csv  scope_42.csv  scope_43.csv  scope_45.csv  scope_49.csv  scope_54.csv  scope_55.csv  scope_56.csv  (+5 more)
(+72 files in other folders)
